--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 /Is_poisonous.ipynb filter=lfs diff=lfs merge=lfs -text
 /transformer.ipynb filter=lfs diff=lfs merge=lfs -text
+/generator_model_006.h5 filter=lfs diff=lfs merge=lfs -text
+/model.hdf5.weights.h5 filter=lfs diff=lfs merge=lfs -text
